--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js", 
+    "dev": "nodemon server.js",
     "test:lint": "alex"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/laibaaac/rtw.git"
@@ -26,6 +27,8 @@
   },
   "homepage": "https://github.com/laibaaac/rtw#readme",
   "dependencies": {
+    "alex": "^11.0.0",
+    "axios": "^1.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
